<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/plantNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_name"
        android:textSize="@dimen/title"
        android:textColor="@color/ColorTitle"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:ignore="SpUsage" />
    <TextView
        android:id="@+id/WaterFrequencyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watering_frequency"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
    <TextView
        android:id="@+id/OptimalSeasonTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optimal_season"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deletePlantBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_plant" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togglebutton"
            android:textOff="@string/reminder_off"
            android:textOn="@string/reminder_on" />
    </LinearLayout>

</LinearLayout>