<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/plantNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ColorTitle"
        android:textSize="@dimen/title"
        android:text="@string/plant_name"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:ignore="SpUsage" />
    <TextView
        android:id="@+id/WaterFrequencyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watering_frequency"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
    <TextView
        android:id="@+id/OptimalSeasonTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optimal_season"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <Button
        android:id="@+id/addPlantBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_plant" />

</LinearLayout>